Lower nav logo to prevent top clipping

--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,10 @@ nav {
 }
 
 .nav-logo img {
-  height: 36px;
+  height: 32px;
   width: auto;
   display: block;
+  margin-top: 6px;
 }
 
 .nav-links {
